# expecto

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.rst  environment.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml
docs/: conf.py  index.rst
docs/expecto/: acknowledge.rst  index.rst  install.rst
expecto/: __init__.py  core.py
expecto/tests/: test_core.py
licenses/: LICENSE.rst
